replace empty div placegolders with css

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,6 @@
     </blockquote>
     <p>Pierre-Simon Laplace, <cite><a href="https://en.wikisource.org/wiki/A_Philosophical_Essay_on_Probabilities/Chapter_2">A Philosophical Essay on Probabilities</a></cite></p>
 </div>
-<div class="small-placeholder">
-</div>
 <div class="text">
     This idea of a completely deterministic universe which strictly follows some laws of nature is what became known as
 </div>
@@ -30,12 +28,10 @@
     and although the ideal of Laplace's Demon is unattainable, we can still strive for an ever-deeper understanding of the laws of nature.
     I hope to add my part to this endevaour by publishing my future projects and research on this website. My current interests lie at the intersection of Mathematics, Physics, and Artificial Intelligence.
 </div>
-<div class="placeholder"></div>
-<div>
+<div id="link-container">
     <a class="links" href="https://www.youtube.com/@lapdem"> <img src="youtube-mark.svg" alt="Laplace's Demon youtube channel" width="64" height="64"></a>
     <a class="links" href="https://github.com/lapdem"> <img src="github-mark.svg" alt="Laplace's Demon github page" width="64" height="64"></a>
 </div>
-<div class="placeholder"></div>
 <hr>
 <div>
     &copy; Laplace's Demon 2024
